--- a/gv_ner/Chart.yaml
+++ b/gv_ner/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: Getvisibility NER Model
+name: gv_ner
 description: Getvisibility NER Model
 version: 1.0.0
 appVersion: 1.0.0
